tests/ui/cached_sync_lock_unknown.stderr
error: Unknown literal value `spinlock`
 --> tests/ui/cached_sync_lock_unknown.rs:3:22
  |
3 | #[cached(sync_lock = "spinlock")]
  |                      ^^^^^^^^^^
